# operant

./: .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CLAIMS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GLASS.md  LAUNCH.md  README.md  SECURITY.md  index.html  justfile  package.json  rust-toolchain.toml  style.css  tokens.css
.cargo/: config.toml
.github/: pull_request_template.md
assets/: alt-text.md
campaign/: MEGA_PROMPT.md  RESUME.md  auto-continue.ps1  checkpoint.md  continue-prompt.txt  frontier.mjs  gen_state.mjs  state.json
cli/: Cargo.toml
cli/scripts/: explain.mjs
cli/src/: main.rs  snapshot.rs
cli/src/commands/: capabilities.rs  compile.rs  doctor.rs  dry_run.rs  explain.rs  explore.rs  install.rs  list.rs  mod.rs  publish.rs  record_ipc.rs  run.rs  serve.rs
cli/src/commands/import/: mod.rs  playwright.rs
cli/tests/: explain_exhaustive.rs  release_gate.rs
contracts/: action_ir.schema.json  bench_result.schema.json  bus_events.md  ipc.md  microcopy_glossary.json  model_backend.md  perception_snapshot.schema.json  registry_manifest.schema.json  workflow_manifest.schema.json
cookbook/: README.md  bench-workflows.json  combine-daily-reports.md  convert-table-to-email.md  copy-invoice-rows-web-to-spreadsheet.md  doctest.mjs  extract-receipt-totals.md  extract-text-from-images.md  fill-form-from-spreadsheet.md  organize-files-by-type.md  rename-file-pdfs-by-date.md  reply-canned-customer-email.md  send-personalized-emails.md
crates/action/: Cargo.toml
crates/action/src/: adapter.rs  executor.rs  focus.rs  killswitch.rs  lib.rs  real_win.rs  synth.rs
crates/action/src/adapters/: filesystem.rs  mod.rs
crates/action/src/adapters/browser/: cdp.rs  digest.rs  fixture.rs  html.rs  mod.rs
crates/action/src/adapters/email/: mod.rs  parse.rs  send.rs  store.rs
crates/action/src/adapters/ocr/: glyph_templates.rs  glyphs.rs  mod.rs  pdf.rs  png.rs
crates/action/src/adapters/office/: com.rs  excel.rs  mod.rs  word.rs
crates/action/tests/: fixture_trajectory.rs  killswitch.rs
crates/bench/: Cargo.toml
crates/bench/src/: cookbook.rs  lib.rs  suite.rs  threshold.rs
crates/bench/tests/: suite_run.rs
crates/compiler/: Cargo.toml
crates/compiler/src/: emit.rs  lib.rs  pipeline.rs  trajectory.rs
crates/compiler/src/drift/: detect.rs  mod.rs  patch.rs  reground.rs  resolve.rs
crates/compiler/tests/: drift.rs
crates/core/: Cargo.toml
crates/core/src/: bus.rs  config.rs  lib.rs  logging.rs  perceive.rs  safety.rs  supervisor.rs
crates/core/src/bus/: events.rs
crates/doctor/: Cargo.toml
crates/doctor/src/: bundle.rs  bus.rs  catalog.rs  checks.rs  cli.rs  finding.rs  lib.rs
crates/doctor/tests/: bundle_integration.rs
crates/gates/: Cargo.toml
crates/gates/src/: context.rs  error.rs  eval.rs  lib.rs  value.rs
crates/gates/tests/: gates_fixture.rs
crates/ir/: Cargo.toml
crates/ir/src/: action.rs  bus.rs  gate.rs  lib.rs  manifest.rs  snapshot.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: lib.rs
crates/orchestrator/src/backends/: agent_bridge.rs  client.rs  error.rs  grounder.rs  live_config.rs  live_endpoint_tests.rs  mock_backends.rs  mod.rs  probe.rs  quirks.rs  redact.rs  sse.rs  transport.rs  transport_reqwest.rs  types.rs
crates/orchestrator/src/backends/dialect/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/orchestrator/src/explore/: control.rs  digest.rs  mod.rs
crates/orchestrator/src/mcp/: client.rs  jsonrpc.rs  mod.rs  protocol.rs  server.rs  transport.rs
crates/orchestrator/src/oauth/: doctor.rs  error.rs  flow.rs  listener.rs  mock_server.rs  mod.rs  pkce.rs  provider.rs  redact.rs  token.rs  transport.rs  urlenc.rs  vault.rs
crates/orchestrator/src/watch/: buffer.rs  detect.rs  event.rs  mod.rs  normalize.rs  suggest.rs
crates/orchestrator/tests/: backend_contract.rs  explore_loop.rs  live_correction_collapse.rs  mcp_handshake.rs  watch_suggest.rs
crates/perception-uia/: Cargo.toml
crates/perception-uia/src/: diff.rs  digest.rs  fixture.rs  lib.rs  resolve.rs  role.rs  selectors.rs  topology.rs
crates/perception-uia/src/uia/: mod.rs  roles.rs  walk.rs  window.rs
crates/recorder/: Cargo.toml
crates/recorder/src/: backup.rs  blobs.rs  error.rs  ids.rs  lib.rs  metrics.rs  misc.rs  redact.rs  runs.rs  schema.rs  steps.rs  store.rs  tests.rs  undo.rs
crates/recorder/tests/: metrics.rs  redaction.rs  undo_journal.rs
crates/registry/: Cargo.toml
crates/registry/src/: canonical.rs  error.rs  hex.rs  install.rs  lib.rs  manifest.rs  pin.rs  sign.rs  verify.rs
crates/registry/tests/: registry_live.rs
crates/replay/: Cargo.toml
crates/replay-wasm/: Cargo.toml
crates/replay-wasm/src/: lib.rs
crates/replay/src/: compose.rs  lib.rs  wasm.rs
crates/replay/tests/: composition.rs  live_gates.rs  live_reresolve.rs  replay_browser_fixture.rs  replay_notepad.rs
crates/safety/: Cargo.toml
crates/safety/src/: audit.rs  dryrun.rs  error.rs  grants.rs  invariants.rs  lib.rs  manifest_guard.rs
crates/safety/src/audit/: mod.rs  pdf.rs
crates/safety/src/data/: dialog_lexicon.json
crates/safety/tests/: audit_export.rs  safety_contract.rs
crates/scheduler/: Cargo.toml
crates/scheduler/src/: lib.rs  queue.rs  trigger.rs
docs/: ARCHITECTURE.md  KNOWN_ISSUES.md  PRD.md  ROADMAP.md  build.md  install.md  models.md  signing.md
e2e/golden-path/: Cargo.toml
e2e/golden-path/src/: lib.rs
e2e/golden-path/tests/: golden_path.rs
guides/: first-workflow.html  install.html  privacy.html  scheduling.html
hooks/: pre-push
release/: BUILD-MATRIX.md  KEYS.md  RELEASE_NOTES_TEMPLATE.md  REPRODUCIBLE.md  (+2 more)
sidecars/vision/: Cargo.toml
sidecars/vision/src/: lib.rs  main.rs
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/src/: main.rs  updater.rs
ui/src-tauri/src/bridge/: mod.rs  protocol.rs  supervisor.rs  transport.rs
ui/src-tauri/tests/: updater_signature.rs
ui/src-tauri/tests/fixtures/updater/: generate.mjs  latest.json  pubkey.tauri-config-value.txt  tampered-signature.txt
(+447 files in other folders)
