[package]
name = "operant-cli"
# binary crate
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "operant"
path = "src/main.rs"

[dependencies]
operant-ir.workspace = true
operant-core.workspace = true
operant-compiler.workspace = true
operant-replay.workspace = true
operant-recorder.workspace = true
operant-registry.workspace = true
operant-bench.workspace = true
operant-doctor.workspace = true
# `import playwright` (X9) replays mapped web steps against a
# `FixtureBrowser` (crates/action/src/adapters/browser, L9A) to build the
# Action IR the compiler consumes.
operant-action.workspace = true
# `run`/`dry-run` build the pre/post EvalContext `operant-replay`'s
# Replayer needs to evaluate a compiled workflow's gates headless.
operant-gates.workspace = true
# Real UIA Perceiver (`UiaPerceiver`, behind ITS `real-uia` feature) so a
# REAL `operant run` re-resolves a click's selector chain against the live
# desktop at run time (KI-1) instead of replaying the coordinate cached at
# teach time. Optional so the default build never links the `windows` crate;
# mirrors operant-action's own `real-input` feature. A Perceiver is a
# PERCEPTION backend, never a model backend, so this keeps replay model-free.
operant-perception-uia = { workspace = true, optional = true }
anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[features]
# A REAL run drives real Windows input (`real-input` -> operant-action's
# WindowsSynthesizer) AND installs a live UIA Perceiver (`real-uia` ->
# operant-perception-uia's UiaPerceiver) so `operant run` re-resolves each
# click against the live desktop (KI-1, cli/src/commands/run.rs). Both are
# needed together to construct the real run path; either alone falls back to
# the deterministic mock path. The heavy `windows`-crate deps stay behind
# these features so the default build (and `just golden`/`just ci`) never
# links them and replay stays deterministic and model-free.
real-uia = ["dep:operant-perception-uia", "operant-perception-uia/real-uia"]
real-input = ["operant-action/real-input"]
# Reserved so the "real" build matrix is uniform with the crates that DO own a
# network transport (operant-orchestrator's `real-transport`, reqwest, used by
# teach). The replay-only CLI has no model/network transport of its own and
# deliberately pulls in neither reqwest nor operant-orchestrator, so this
# feature is intentionally inert: `operant run` stays deterministic and offline
# either way. It exists so `--features real-uia,real-input,real-transport`
# builds the CLI instead of failing on an unknown feature.
real-transport = []
