[package]
name = "operant-cli"
# binary crate
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "operant"
path = "src/main.rs"

[dependencies]
operant-ir.workspace = true
operant-core.workspace = true
operant-compiler.workspace = true
operant-replay.workspace = true
operant-recorder.workspace = true
operant-registry.workspace = true
operant-bench.workspace = true
operant-doctor.workspace = true
# `import playwright` (X9) replays mapped web steps against a
# `FixtureBrowser` (crates/action/src/adapters/browser, L9A) to build the
# Action IR the compiler consumes.
operant-action.workspace = true
# `run`/`dry-run` build the pre/post EvalContext `operant-replay`'s
# Replayer needs to evaluate a compiled workflow's gates headless.
operant-gates.workspace = true
# The `explore` verb (teach) drives operant-orchestrator's `ExploreLoop` and
# picks its planner backend by cfg (`MockPlannerBackend` by default, the
# opt-in `AgentBridgeBackend` under `dev-agent-bridge`). This is the ONLY verb
# that pulls in the orchestrator; `run`/`dry-run` stay on operant-replay alone,
# so replay's model-free crate graph (crates/replay's own guarantee and
# scripts/check_airgap.mjs) is untouched. The orchestrator's own network
# transport stays behind ITS `real-transport` feature, which this CLI never
# enables.
operant-orchestrator.workspace = true
# Perceiver backends. FixturePerceiver (always built, no `windows` dep) is the
# default/mock perception source for `explore`; UiaPerceiver (behind this
# crate's `real-uia` feature -> operant-perception-uia's own `real-uia`) is the
# live one a REAL `operant run`/`explore` re-resolves selectors against at run
# time (KI-1). Not optional: `explore`'s default build needs FixturePerceiver.
# A Perceiver is a PERCEPTION backend, never a model backend, so this keeps
# replay model-free.
operant-perception-uia.workspace = true
anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# `explore` provides the tokio runtime the async ExploreLoop needs; every other
# verb stays synchronous. Workspace-pinned (rt-multi-thread + time), already
# compiled for operant-orchestrator.
tokio.workspace = true

[features]
# A REAL run drives real Windows input (`real-input` -> operant-action's
# WindowsSynthesizer) AND installs a live UIA Perceiver (`real-uia` ->
# operant-perception-uia's UiaPerceiver) so `operant run` re-resolves each
# click against the live desktop (KI-1, cli/src/commands/run.rs). Both are
# needed together to construct the real run path; either alone falls back to
# the deterministic mock path. The heavy `windows`-crate deps stay behind
# these features so the default build (and `just golden`/`just ci`) never
# links them and replay stays deterministic and model-free.
real-uia = ["operant-perception-uia/real-uia"]
real-input = ["operant-action/real-input"]
# Reserved so the "real" build matrix is uniform with the crates that DO own a
# network transport (operant-orchestrator's `real-transport`, reqwest, used by
# teach). `operant run` has no model/network transport of its own and stays
# deterministic and offline; this feature is intentionally inert here. It
# exists so `--features real-uia,real-input,real-transport` builds the CLI
# instead of failing on an unknown feature.
real-transport = []
# P0b proof harness: makes `operant explore` assemble the filesystem
# `AgentBridgeBackend` planner (operant-orchestrator's own `dev-agent-bridge`)
# instead of the scripted `MockPlannerBackend`. Opt-in only, never in a release
# build; lets an operator act as the planner brain for a real teach run.
dev-agent-bridge = ["operant-orchestrator/dev-agent-bridge"]
