[package]
name = "operant-cli"
# binary crate
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "operant"
path = "src/main.rs"

[dependencies]
operant-ir.workspace = true
operant-core.workspace = true
operant-compiler.workspace = true
operant-replay.workspace = true
operant-recorder.workspace = true
operant-registry.workspace = true
operant-bench.workspace = true
operant-doctor.workspace = true
# `import playwright` (X9) replays mapped web steps against a
# `FixtureBrowser` (crates/action/src/adapters/browser, L9A) to build the
# Action IR the compiler consumes.
operant-action.workspace = true
# `run`/`dry-run` build the pre/post EvalContext `operant-replay`'s
# Replayer needs to evaluate a compiled workflow's gates headless.
operant-gates.workspace = true
# The `explore` verb (teach) drives operant-orchestrator's `ExploreLoop` and
# picks its planner backend by cfg (`MockPlannerBackend` by default, the
# opt-in `AgentBridgeBackend` under `dev-agent-bridge`). This is the ONLY verb
# that pulls in the orchestrator; `run`/`dry-run` stay on operant-replay alone,
# so replay's model-free crate graph (crates/replay's own guarantee and
# scripts/check_airgap.mjs) is untouched. The orchestrator's own network
# transport stays behind ITS `real-transport` feature, which this CLI's own
# `real-transport` feature now forwards (see below) so the shipped `serve` core
# can assemble a live model backend for teach; `run`/`dry-run` link no transport
# and stay model-free.
operant-orchestrator.workspace = true
# Perceiver backends. FixturePerceiver (always built, no `windows` dep) is the
# default/mock perception source for `explore`; UiaPerceiver (behind this
# crate's `real-uia` feature -> operant-perception-uia's own `real-uia`) is the
# live one a REAL `operant run`/`explore` re-resolves selectors against at run
# time (KI-1). Not optional: `explore`'s default build needs FixturePerceiver.
# A Perceiver is a PERCEPTION backend, never a model backend, so this keeps
# replay model-free.
operant-perception-uia.workspace = true
anyhow.workspace = true
serde_json.workspace = true
thiserror.workspace = true
# `serve` base64-encodes the portable backup archive (export_backup/import_backup)
# and decodes an installed workflow's DSL bytes (install_workflow) for the
# newline-delimited JSON IPC frames (contracts/ipc.md section 5f/5d).
base64.workspace = true
# `explore` provides the tokio runtime the async ExploreLoop needs; every other
# verb stays synchronous. Workspace-pinned (rt-multi-thread + time), already
# compiled for operant-orchestrator.
tokio.workspace = true

[features]
# A REAL run drives real Windows input (`real-input` -> operant-action's
# WindowsSynthesizer) AND installs a live UIA Perceiver (`real-uia` ->
# operant-perception-uia's UiaPerceiver) so `operant run` re-resolves each
# click against the live desktop (KI-1, cli/src/commands/run.rs). Both are
# needed together to construct the real run path; either alone falls back to
# the deterministic mock path. The heavy `windows`-crate deps stay behind
# these features so the default build (and `just golden`/`just ci`) never
# links them and replay stays deterministic and model-free.
real-uia = ["operant-perception-uia/real-uia"]
real-input = ["operant-action/real-input"]
# Forwards operant-orchestrator's `real-transport` feature (reqwest,
# `ReqwestTransport`) so the shipped `serve` core can build a REAL HTTP model
# backend for teach (`build_planner`, cli/src/commands/serve.rs) instead of the
# scripted mock. `operant run`/`dry-run` still have no model/network transport
# of their own and stay deterministic and offline (they never touch the
# orchestrator). A release core is built `--features real-uia,real-input,
# real-transport`, so this must be a real passthrough, not an empty stub.
real-transport = ["operant-orchestrator/real-transport"]
# P0b proof harness: makes `operant explore` assemble the filesystem
# `AgentBridgeBackend` planner (operant-orchestrator's own `dev-agent-bridge`)
# instead of the scripted `MockPlannerBackend`. Opt-in only, never in a release
# build; lets an operator act as the planner brain for a real teach run.
dev-agent-bridge = ["operant-orchestrator/dev-agent-bridge"]
# IPC fixture recorder (P1): builds the dev-only `operant record-ipc` verb
# (cli/src/commands/record_ipc.rs), which drives a real explore -> compile ->
# replay -> undo session against the core Bus and writes the frozen IPC contract
# fixtures under contracts/fixtures/ipc/, framed per contracts/ipc.md. Opt-in
# only, never in a release build (like `dev-agent-bridge`); it links no network
# or model transport, so replay stays deterministic and offline. Uses crates the
# CLI already depends on (orchestrator, recorder, compiler, replay, gates).
dev-ipc-record = []
