[package]
name = "operant-action"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
operant-ir.workspace = true
operant-core.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
jsonschema.workspace = true
parking_lot.workspace = true
rand.workspace = true
# Already workspace-pinned, used elsewhere in the tree; adopted here for
# the email adapter's search patterns and fs's binary-safe read/write.
regex.workspace = true
base64.workspace = true

# Pure-Rust zlib inflate for the ocr adapter's PNG decoder (IDAT is always
# zlib-compressed per the PNG spec). No C toolchain, no transitive deps.
# Optional and behind the `ocr` feature per this crate's dependency policy.
miniz_oxide = { version = "0.8", optional = true }

# Real Windows input synthesis. Optional so the default build (and every
# lane that just needs the trait/mock) never has to compile it.
windows = { version = "0.58", optional = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_Memory",
  "Win32_System_Threading",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
default = ["ocr"]
real-input = ["dep:windows"]
# On-device PDF/PNG text extraction (crate::adapters::ocr). Default-on: it
# has no platform dependency, just the pure-Rust inflate above.
ocr = ["dep:miniz_oxide"]
# Office COM automation (crate::adapters::office). Optional: pulls in the
# `windows` crate's COM/Automation surface, Windows-only and meaningless
# without Office installed. Tests run against the mock backend regardless
# of this feature; see `adapters::office`.
office-com = ["dep:windows", "windows/Win32_System_Com", "windows/Win32_System_Ole", "windows/Win32_System_Variant"]
