[package]
name = "operant-compiler"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
operant-ir.workspace = true
operant-recorder.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
blake3.workspace = true
