[package]
name = "operant-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
operant-ir.workspace = true
operant-core.workspace = true
operant-action.workspace = true
operant-recorder.workspace = true
operant-gates.workspace = true
operant-safety.workspace = true
# The MCP server (`mcp`) replays a compiled workflow headless on every
# `tools/call`, the same `operant-replay` seam the CLI's `run` verb uses;
# `operant-replay` itself stays backend-free (see its own crate doc), so
# this does not put a model or network path behind the MCP server.
operant-replay.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
blake3.workspace = true

# `BoxFuture`/`BoxStream`: `ModelBackend::complete`/`probe` return these by
# contract (contracts/model_backend.md). Pure-Rust, no I/O of its own.
futures = "0.3"

# The explore loop's HITL control surface (`explore::control::BusControl`)
# subscribes to the operant-core bus, whose `Subscription::rx` is a
# `crossbeam_channel::Receiver`; that type has to be nameable here too.
# Already a workspace dependency (operant-core's own bus is built on it).
crossbeam-channel.workspace = true

# Real network transport for the backends::HttpTransport seam. Optional so
# the default build (and every lane that only needs the trait/mock) never
# has to compile it; see operant-action's `real-input` feature for the same
# pattern.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"], optional = true }

[dev-dependencies]
# FixturePerceiver for the explore-loop tests (`docs/ARCHITECTURE.md` C6
# test bar). Default features only: no `real-uia`, so no `windows` crate
# in the test build.
operant-perception-uia.workspace = true
# Test-only: tests/mcp_handshake.rs compiles the shared notepad fixture
# trajectory into a real CompiledWorkflow to serve over MCP, rather than a
# hand-rolled stub. Not a runtime dependency of the `mcp` module itself.
operant-compiler.workspace = true

[features]
real-transport = ["dep:reqwest"]
