[package]
name = "operant-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
operant-ir.workspace = true
operant-core.workspace = true
operant-action.workspace = true
operant-recorder.workspace = true
operant-gates.workspace = true
operant-safety.workspace = true
# oauth's refresh-failure path returns a typed `operant_doctor::Finding`
# ("return the typed finding; the doctor/UI wires it" -- X16 handoff);
# operant-doctor depends only on operant-ir/operant-core, so this does not
# create a cycle.
operant-doctor.workspace = true
# The MCP server (`mcp`) replays a compiled workflow headless on every
# `tools/call`, the same `operant-replay` seam the CLI's `run` verb uses;
# `operant-replay` itself stays backend-free (see its own crate doc), so
# this does not put a model or network path behind the MCP server.
operant-replay.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
blake3.workspace = true
# oauth::pkce (code_verifier/state/nonce generation) and
# oauth::vault::vault_key. Already workspace-pinned, used elsewhere in the
# tree (action, compiler, registry, ...).
rand.workspace = true
base64.workspace = true

# `BoxFuture`/`BoxStream`: `ModelBackend::complete`/`probe` return these by
# contract (contracts/model_backend.md). Pure-Rust, no I/O of its own.
futures = "0.3"

# The explore loop's HITL control surface (`explore::control::BusControl`)
# subscribes to the operant-core bus, whose `Subscription::rx` is a
# `crossbeam_channel::Receiver`; that type has to be nameable here too.
# Already a workspace dependency (operant-core's own bus is built on it).
crossbeam-channel.workspace = true

# Real network transport for the backends::HttpTransport seam. Optional so
# the default build (and every lane that only needs the trait/mock) never
# has to compile it; see operant-action's `real-input` feature for the same
# pattern.
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"], optional = true }

# PKCE S256 (RFC 7636): BASE64URL-ENCODE(SHA256(ASCII(verifier))). Small,
# pure-Rust, no transitive platform deps -- not gated behind a feature
# because PKCE is not optional (oauth::pkce never offers a `plain` path).
sha2 = "0.10"

# Real Windows Credential Manager (oauth::vault::WindowsCredentialVault).
# Optional so the default build (and every test in this crate, which only
# ever constructs oauth::MockVault) never has to compile it. Mirrors
# operant-action's `real-input` feature and this crate's own `real-transport`
# above: heavy platform deps (`windows` crate) are added per-crate behind a
# feature.
windows = { version = "0.58", optional = true, features = [
  "Win32_Foundation",
  "Win32_Security_Credentials",
] }

[dev-dependencies]
# FixturePerceiver for the explore-loop tests (`docs/ARCHITECTURE.md` C6
# test bar). Default features only: no `real-uia`, so no `windows` crate
# in the test build.
operant-perception-uia.workspace = true
# Test-only: tests/mcp_handshake.rs compiles the shared notepad fixture
# trajectory into a real CompiledWorkflow to serve over MCP, rather than a
# hand-rolled stub. Not a runtime dependency of the `mcp` module itself.
operant-compiler.workspace = true
# oauth::redact's grep-log test bar (X16 TESTS: "tokens NEVER appear in
# logs... a grep test over captured log output") needs a real `tracing`
# subscriber to capture into a buffer. Already workspace-pinned (see root
# Cargo.toml); dev-only, so it never reaches a release build.
tracing-subscriber.workspace = true

[features]
real-transport = ["dep:reqwest"]
real-vault = ["dep:windows"]
# P0b proof harness ONLY: compiles the filesystem `AgentBridgeBackend`, which
# blocks a planner turn on an operator writing a response file. Opt-in and
# never in `default`; a release build must never link a backend that waits on a
# human. Adds no dependencies (pure std + the futures/tokio already present).
dev-agent-bridge = []
