[package]
name = "operant-perception-uia"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Windows UIA and fixture-backed Perceiver implementations against the operant-core Perceiver trait (C2)."

[dependencies]
operant-ir.workspace = true
operant-core.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde_json.workspace = true
blake3.workspace = true

# Real Windows UIA COM backend. Optional so the default build (and every
# lane that just needs the trait/fixture) never has to compile it.
windows = { version = "0.58", optional = true, features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_StationsAndDesktops",
  "Win32_System_Threading",
  "Win32_UI_Accessibility",
  "Win32_UI_HiDpi",
  "Win32_UI_WindowsAndMessaging",
] }

[features]
real-uia = ["dep:windows"]
