[package]
name = "operant-registry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
operant-ir.workspace = true
ed25519-dalek.workspace = true
base64.workspace = true
blake3.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
