[package]
name = "operant-replay-wasm"
version = "1.0.0"
edition = "2021"
rust-version = "1.90"
license = "Apache-2.0"

# Deliberately its own standalone workspace (empty [workspace] table below),
# NOT a member of the root workspace at repo root. See src/lib.rs for why:
# `crate-type = ["cdylib"]` on a crate every native crate in the main
# workspace links against (transitively, via `operant-replay`) made
# `cargo build --workspace` at the repo root try to compile this
# wasm-bindgen-only crate for the native target too, which fails outright
# (`JsValue` is not available off wasm32) and, before the split, corrupted
# `operant-orchestrator`'s doctest link (E0460). Kept as a path-dependency
# sibling of the main workspace's crates so it can still build against them
# directly; built explicitly via
# `cargo build --manifest-path crates/replay-wasm/Cargo.toml --target wasm32-unknown-unknown`,
# never swept up by the root workspace's `--workspace` builds.
[workspace]

[lib]
crate-type = ["cdylib"]

[dependencies]
operant-ir = { path = "../ir" }
operant-action = { path = "../action" }
operant-gates = { path = "../gates" }
operant-replay = { path = "../replay" }
serde_json = "1"
wasm-bindgen = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
# `operant-action` pulls in `ahash`, which pulls in `getrandom`; on
# wasm32-unknown-unknown that needs the `wasm_js` backend enabled (Cargo
# feature-unifies the single `getrandom` in the dependency graph, so
# enabling it here is enough) plus the `getrandom_backend="wasm_js"` cfg
# flag, set target-scoped in `.cargo/config.toml` at the repo root (that
# file's rustflags are target-scoped, not workspace-scoped, so they still
# apply here).
getrandom = { version = "0.3", features = ["wasm_js"] }
