# Detached on purpose: this crate is not a member of the main Operant Cargo
# workspace (see ../../Cargo.toml). An empty [workspace] table here makes
# this directory its own workspace root, so:
#   - `cargo build --workspace` / `cargo test --workspace` at the repo root
#     never touch it (the root workspace's members list is explicit and does
#     not name this directory, so this is belt-and-suspenders, not the only
#     thing keeping it out);
#   - `cd e2e/golden-path && cargo test` still works standalone instead of
#     erroring with "current package believes it's in a workspace when it's
#     not" (the failure mode a nested directory hits without its own
#     [workspace] table once an ancestor directory has one).
# Mirrors sidecars/vision/Cargo.toml's own detached-workspace note. Unlike
# that sidecar, this crate DOES depend on the operant crates, via relative
# path, because its whole point is to drive them end to end; crates/orchestrator,
# crates/action, etc. stay members of the MAIN workspace (they are listed in
# its own `members`), so their own `foo.workspace = true` fields keep
# resolving against the main workspace's [workspace.dependencies] regardless
# of this crate depending on them from the outside.
[workspace]

[package]
name = "operant-golden-path-e2e"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "NFR-6/NFR-7 headless golden path: explore once with a model, replay forever without one, driven end to end with zero network/GPU."

[dependencies]

[dev-dependencies]
operant-ir = { path = "../../crates/ir" }
operant-core = { path = "../../crates/core" }
operant-action = { path = "../../crates/action" }
operant-recorder = { path = "../../crates/recorder" }
operant-gates = { path = "../../crates/gates" }
operant-perception-uia = { path = "../../crates/perception-uia" }
operant-orchestrator = { path = "../../crates/orchestrator" }
operant-compiler = { path = "../../crates/compiler" }
operant-replay = { path = "../../crates/replay" }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
