# Detached on purpose: this sidecar is not a member of the main Operant
# Cargo workspace (see ../../Cargo.toml). An empty [workspace] table here
# makes this directory its own workspace root, so:
#   - `cargo build --workspace` at the repo root never touches it (keeps
#     the default workspace build lean, as instructed);
#   - it still builds and tests standalone: `cd sidecars/vision && cargo test`.
# See src/lib.rs for why it also carries zero dependency on operant-ir even
# though crates/orchestrator's fixture grounder solves the same problem: a
# sidecar is a process boundary, not a library import.
[workspace]

[package]
name = "operant-vision-grounder"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Fixture-mode vision grounder sidecar: deterministic coordinates and a cropped anchor capture, no GPU, no real model."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
